Installer fixes and GUI style changes

--- a/UI/Style_Sheets/dark.css
+++ b/UI/Style_Sheets/dark.css
@@ -452,6 +452,7 @@ QTabWidget#tabWidget2_2::pane{
 }
 
 QComboBox[objectName|="comboBox_"] {
+    padding-left: 4px;
     color: #000000;
 	border: 1px solid @color2;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
@@ -461,10 +462,12 @@ QComboBox[objectName|="comboBox_"]::item {
     color: @color4;
 }
 QComboBox[objectName|="comboBox_"]:disabled{
+    padding-left: 4px;
 	color: #999999;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
 }
 QComboBox[objectName|="comboBox_"]:hover{
+    padding-left: 4px;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
 }
 QComboBox[objectName|="comboBox_"]::item:selected{
@@ -479,6 +482,7 @@ QComboBox[objectName|="comboBox_"]::indicator{
     selection-color:transparent;
 }
 QComboBox[objectName|="comboBox2_"] {
+    padding-left: 4px;
     color: #000000;
     border: 1px solid #111111;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
@@ -489,11 +493,13 @@ QComboBox[objectName|="comboBox2_"]::item {
     color: @color4;
 }
 QComboBox[objectName|="comboBox2_"]:disabled{
+    padding-left: 4px;
 	color: #999999;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
     font: 10pt "Ubuntu";
 }
 QComboBox[objectName|="comboBox2_"]:hover{
+    padding-left: 4px;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
 }
 QComboBox[objectName|="comboBox2_"]::item:selected{
